--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
     "bootstrap": "^4.5.0",
+    "eslint-config-airbnb-typescript": "^8.0.2",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-yandex-maps": "^4.4.0",
     "typescript": "^3.7.5",
     "use-async-effect": "^2.2.2"
   },
@@ -38,10 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-bootstrap": "^1.0.1",
-    "eslint-config-airbnb-typescript": "^8.0.2",
-    "node-sass": "^4.14.1"
   }
 }
