--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "object-curly-newline": "off",
     "react/jsx-one-expression-per-line": "off",
     "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/control-has-associated-label": "off",
     "react/prop-types": "off",
     "@typescript-eslint/no-unused-expressions": "off"
   }
