--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
-    "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-yandex-maps": "^4.4.0",
     "typescript": "^3.7.5",
-    "use-async-effect": "^2.2.2"
+    "use-async-effect": "^2.2.2",
+    "use-debounce": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
